--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "Don't ask again"
+  },
   "done": {
     "message": "Done"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "Enable New Setup"
   },
+  "enable_now": {
+    "message": "Enable now"
+  },
   "enable_when_blacklisted": {
     "message": "To use this function, undo Restrict Site."
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "Expand All"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
   },
   "extensions": {
     "message": "Extensions",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "Learn More"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Learn more about YouTube’s challenges to ad blockers"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Let Ghostery be your complete privacy advocate and reject all popups and tracking for you, or do it yourself!"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "Modified"
+  },
+  "more_ad_blocking_available": {
+    "message": "More ad blocking available"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "More information on $${0} methodology in Ghostery’s Manifesto."
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "on this website"
   },
+  "open_youtube_in_private_window": {
+    "message": "Open YouTube in Private Window"
+  },
   "options_tracker_wheel_disabled": {
     "message": "Disable Tracker Wheel in browser toolbar"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "Organizations"
+  },
+  "other": {
+    "message": "Other",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "Page Load:"
@@ -1903,8 +1925,14 @@
     "message": "Unknown",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "Visit our blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "We have updated Terms & Conditions. To continue using the Ghostery Tracker & Ad Blocker while browsing, please renew the setup."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "We know you rely on Ghostery for a smooth YouTube experience. Until a more refined solution emerges, here’s a temporary fix."
   },
   "welcome_to_ghostery": {
     "message": "Welcome to Ghostery"
@@ -1951,5 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "Your Privacy Features:"
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube blocking you from watching ad-free videos?"
   }
 }
