--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "No vuelvas a preguntar"
+  },
   "done": {
     "message": "Hecho"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "Activar nueva configuración"
   },
+  "enable_now": {
+    "message": "Activar"
+  },
   "enable_when_blacklisted": {
     "message": "Para usar esta función, anula Restringir sitio."
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "Expandir todo"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Amplía el bloqueo de anuncios de Ghostery a los buscadores en unos sencillos pasos."
   },
   "extensions": {
     "message": "Extensiones",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "Saber más"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Más información sobre los desafíos de YouTube a los bloqueadores de anuncios"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Permite que Ghostery sea tu defensor de la privacidad y rechace todas las ventanas emergentes y el seguimiento... ¡o hazlo tú personalmente!"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "Modificada"
+  },
+  "more_ad_blocking_available": {
+    "message": "Más bloqueo de anuncios disponible"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "en este sitio web"
   },
+  "open_youtube_in_private_window": {
+    "message": "Abrir YouTube en una ventana privada"
+  },
   "options_tracker_wheel_disabled": {
     "message": "Desactivar rueda del rastreador en la barra de herramientas del navegador"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "Organizaciones"
+  },
+  "other": {
+    "message": "Otros",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "Carga de página"
@@ -1903,8 +1925,14 @@
     "message": "Desconocido",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "Visita nuestro blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Actualizamos los Términos y condiciones. Renueva la configuración para seguir usando Ghostery para bloquear anuncios y detener rastreadores mientras navegas."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Sabemos que confías en Ghostery para disfrutar de una experiencia fluida en YouTube. Hasta que aparezca una solución más refinada, aquí tienes una solución temporal."
   },
   "welcome_to_ghostery": {
     "message": "Bienvenido a Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "Tus funciones de privacidad:"
-	},
-	"account_details": {
-		"message": "Detalles de la cuenta"
-	},
-	"contributor": {
-		"message": "Colaborador"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "Únete a Ghostery en la lucha por una web en la que la privacidad sea un derecho humano básico."
-	},
-	"join_ghostery": {
-		"message": "Únete a Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
-	},
-	"settings_sync": {
-		"message": "Sincronizar configuración"
-	},
-	"you_are_signed_in_as_": {
-		"message": "Iniciaste sesión como:"
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "¿Te impide YouTube ver vídeos sin publicidad?"
+  }
 }
