--- a/extension-manifest-v2/_locales/fr/messages.json
+++ b/extension-manifest-v2/_locales/fr/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "Ne demande plus rien"
+  },
   "done": {
     "message": "Terminé"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "Activer la nouvelle configuration"
   },
+  "enable_now": {
+    "message": "Activer maintenant"
+  },
   "enable_when_blacklisted": {
     "message": "Pour utiliser cette fonction, restreignez le site."
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "Tout afficher"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Étendez le blocage des publicités de Ghostery aux moteurs de recherche en quelques étapes simples."
   },
   "extensions": {
     "message": "Extensions",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "En savoir plus"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "En savoir plus sur les défis de YouTube face aux bloqueurs de publicité."
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Laissez Ghostery défendre vos convictions en rejetant les fenêtres surgissantes et mouchards, ou faites-le vous-même !"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "Modifié"
+  },
+  "more_ad_blocking_available": {
+    "message": "Davantage de blocage de publicités disponible"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Plus d'informations sur la méthodologie $${0} dans le Manifeste de Ghostery."
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "Sur ce site"
   },
+  "open_youtube_in_private_window": {
+    "message": "Ouvrir YouTube dans une fenêtre privée"
+  },
   "options_tracker_wheel_disabled": {
     "message": "Désactiver la roue des trackers dans la barre d’outils du navigateur"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "Organisations"
+  },
+  "other": {
+    "message": "Non-classés",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "Chargement de la page"
@@ -1903,8 +1925,14 @@
     "message": "Inconnu",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "Visite notre blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Nous savons que tu comptes sur Ghostery pour une expérience YouTube fluide. En attendant qu'une solution plus raffinée émerge, voici une solution temporaire."
   },
   "welcome_to_ghostery": {
     "message": "Bienvenue à Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "Vos fonctions de confidentialité :"
-	},
-	"account_details": {
-		"message": "Détails du compte"
-	},
-	"contributor": {
-		"message": "Contributeur"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
-	},
-	"join_ghostery": {
-		"message": "Rejoignez Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "Enregistrez et synchronisez vos paramètres personnalisés sur vos navigateurs et vos appareils."
-	},
-	"settings_sync": {
-		"message": "Synchronisation des paramètres"
-	},
-	"you_are_signed_in_as_": {
-		"message": "Vous êtes connecté en tant que :"
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube t'empêche de regarder des vidéos sans publicité ?"
+  }
 }
