--- a/extension-manifest-v2/_locales/ja/messages.json
+++ b/extension-manifest-v2/_locales/ja/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "二度と聞くな"
+  },
   "done": {
     "message": "完了"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "新規設定を有効にする"
   },
+  "enable_now": {
+    "message": "今すぐ有効化"
+  },
   "enable_when_blacklisted": {
     "message": "この機能を使用するには、「サイトを制限」を元に戻してください。"
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "すべてを展開"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "簡単なステップで、Ghosteryの広告ブロッキングを検索エンジンへと拡張できます。"
   },
   "extensions": {
     "message": "拡張機能",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "詳細はこちら"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "広告ブロッカーに対するYouTubeの挑戦についてもっと知る"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Ghosteryをプライバシーの完璧な守護者にして、ポップアップやお客様の追跡を全て拒否するか、ご自身で手動設定しましょう!"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "修正済み"
+  },
+  "more_ad_blocking_available": {
+    "message": "利用できるその他の広告ブロッキング"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "$${0}の方法論の詳細については、Ghostery's Manifestoに記載されています。"
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "このウェブサイトに対して"
   },
+  "open_youtube_in_private_window": {
+    "message": "プライベートウィンドウでYouTubeを開く"
+  },
   "options_tracker_wheel_disabled": {
     "message": "ブラウザのツールバーでトラッカーホイールを無効にする"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "組織"
+  },
+  "other": {
+    "message": "その他",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "ページのロード"
@@ -1903,8 +1925,14 @@
     "message": "未知",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "ブログを見る"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "利用規約を更新しました。Ghosteryのトラッカー＆広告ブロッカーを引き続きご利用いただくには、設定を更新してください。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "スムーズなYouTube体験のためにGhosteryに依存していることは承知しています。より洗練されたソリューションが登場するまでの一時的な解決策をご紹介します。"
   },
   "welcome_to_ghostery": {
     "message": "Ghosteryをご利用いただきありがとうございます"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "あなたのプライバシーを守る機能:"
-	},
-	"account_details": {
-		"message": "アカウント詳細"
-	},
-	"contributor": {
-		"message": "Contributor"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。ぜひサポートをお願いいたします。"
-	},
-	"join_ghostery": {
-		"message": "Ghosteryに登録"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "ブラウザとデバイス間でカスタム設定を保存・同期しましょう。"
-	},
-	"settings_sync": {
-		"message": "同期設定"
-	},
-	"you_are_signed_in_as_": {
-		"message": "次のユーザーでサインインしています:"
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTubeが広告なし動画の視聴をブロック？"
+  }
 }
