--- a/extension-manifest-v2/_locales/pt_BR/messages.json
+++ b/extension-manifest-v2/_locales/pt_BR/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "Não pergunte novamente"
+  },
   "done": {
     "message": "Pronto"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "Ativar nova configuração"
   },
+  "enable_now": {
+    "message": "Ativar agora"
+  },
   "enable_when_blacklisted": {
     "message": "Para usar esta função, desfaça Restringir Site."
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "Expandir tudo"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expanda o bloqueio de anúncios do Ghostery para mecanismos de pesquisa em algumas etapas fáceis."
   },
   "extensions": {
     "message": "Extensões",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "Aprender mais"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Saiba mais sobre os desafios do YouTube em relação aos bloqueadores de anúncios"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Deixe o Ghostery ser seu defensor completo da privacidade e rejeite todos os pop-ups e rastreamentos para você, ou faça você mesmo!"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "Modificado"
+  },
+  "more_ad_blocking_available": {
+    "message": "Mais bloqueio de anúncios disponível"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Mais informações sobre a metodologia $${0} no Manifesto do Ghostery."
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "neste site"
   },
+  "open_youtube_in_private_window": {
+    "message": "Abrir o YouTube em uma janela privada"
+  },
   "options_tracker_wheel_disabled": {
     "message": "Desativar o Tracker Wheel na barra de ferramentas do navegador"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "Organizações"
+  },
+  "other": {
+    "message": "Outro",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "Carregar página"
@@ -1903,8 +1925,14 @@
     "message": "Desconhecido",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "Visite nosso blog"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Atualizamos os Termos e Condições. Para continuar usando o Ghostery Tracker & Ad Blocker durante a navegação, renove a configuração."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Sabemos que você confia no Ghostery para ter uma experiência tranquila no YouTube. Até que surja uma solução mais refinada, aqui está uma correção temporária."
   },
   "welcome_to_ghostery": {
     "message": "Bem-vindo ao Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "Seus recursos de privacidade:"
-	},
-	"account_details": {
-		"message": "Detalhes da conta"
-	},
-	"contributor": {
-		"message": "Colaborador"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "Ajude o Ghostery a lutar por uma web onde a privacidade é um direito humano básico."
-	},
-	"join_ghostery": {
-		"message": "Junte-se ao Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "Salve e sincronize suas configurações personalizadas entre navegadores e dispositivos."
-	},
-	"settings_sync": {
-		"message": "Configurações de sincronização"
-	},
-	"you_are_signed_in_as_": {
-		"message": "Você entrou como:"
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "O YouTube está impedindo que você assista a vídeos sem anúncios?"
+  }
 }
