--- a/extension-manifest-v2/_locales/ru/messages.json
+++ b/extension-manifest-v2/_locales/ru/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "Не спрашивай больше"
+  },
   "done": {
     "message": "Готово"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "Включить новую настройку"
   },
+  "enable_now": {
+    "message": "Включить"
+  },
   "enable_when_blacklisted": {
     "message": "Для использования этой функции отмените включение сайта в список ограниченных"
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "Развернуть все"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Настройте блокировку рекламы от Ghostery для поисковых систем в несколько простых шагов."
   },
   "extensions": {
     "message": "Расширения",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "Подробнее"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "Узнай больше о том, как YouTube противостоит блокировщикам рекламы"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "Позвольте Ghostery стать вашим комплексным защитником конфиденциальности и отклонять за вас все всплывающие окна и отслеживание или делайте это самостоятельно!"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "Изменено"
+  },
+  "more_ad_blocking_available": {
+    "message": "Дополнительные настройки блокировки рекламы"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Дополнительная информация о методологии $${0} в Декларации Ghostery."
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "на этом веб-сайте"
   },
+  "open_youtube_in_private_window": {
+    "message": "Открыть YouTube в приватном окне"
+  },
   "options_tracker_wheel_disabled": {
     "message": "Отключить Tracker Wheel на панели инструментов браузера"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "Организации"
+  },
+  "other": {
+    "message": "Другое",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "Загрузка страницы"
@@ -1903,8 +1925,14 @@
     "message": "Неизвестный",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "Посетите наш блог"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "Мы обновили Условия и положения. Чтобы и дальше использовать Ghostery Tracker & Ad Blocker для просмотра веб-страниц, обновите настройки."
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "Мы знаем, что ты полагаешься на Ghostery для бесперебойной работы с YouTube. Пока не появится более совершенное решение, вот временное исправление."
   },
   "welcome_to_ghostery": {
     "message": "Добро пожаловать в Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "Ваши функции защиты конфиденциальности:"
-	},
-	"account_details": {
-		"message": "Данные аккаунта"
-	},
-	"contributor": {
-		"message": "Участник"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "Помогите Ghostery в борьбе за конфиденциальность как за основное право человека."
-	},
-	"join_ghostery": {
-		"message": "Присоединяйтесь к Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "Сохраняйте свои настройки и синхронизируйте их между браузерами и устройствами."
-	},
-	"settings_sync": {
-		"message": "Синхронизация настроек"
-	},
-	"you_are_signed_in_as_": {
-		"message": "Вы вошли как:"
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube блокирует тебе просмотр видео без рекламы?"
+  }
 }
