--- a/extension-manifest-v2/_locales/zh_CN/messages.json
+++ b/extension-manifest-v2/_locales/zh_CN/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "别再问了"
+  },
   "done": {
     "message": "完成"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "启用新设置"
   },
+  "enable_now": {
+    "message": "立即启用"
+  },
   "enable_when_blacklisted": {
     "message": "要使用该功能，请撤销限制网站。"
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "全部展开"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "只需简单几步，即可将 Ghostery 广告拦截功能扩展到搜索引擎。"
   },
   "extensions": {
     "message": "扩展",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "了解详情"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "进一步了解 YouTube 对广告拦截器的挑战"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "让 Ghostery 成为您的全面隐私权倡导者，并为您拒绝所有弹出窗口和跟踪，或者由您自己做主！"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "已修改"
+  },
+  "more_ad_blocking_available": {
+    "message": "更多广告拦截功能"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "如需了解有关 $${0} 方法的更多信息，请参见 Ghostery 的宣言。"
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "在此网站上"
   },
+  "open_youtube_in_private_window": {
+    "message": "在私人窗口中打开 YouTube"
+  },
   "options_tracker_wheel_disabled": {
     "message": "在浏览器工具栏中禁用跟踪器轮盘"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "组织机构"
+  },
+  "other": {
+    "message": "其他",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "网页加载"
@@ -1903,8 +1925,14 @@
     "message": "未知",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "访问我们的博客"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "我们更新了条款及条件。若要在浏览时继续使用 Ghostery Tracker 和广告拦截工具，请更新设置。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "我们知道，您依赖 Ghostery 来获得流畅的 YouTube 体验。在更完善的解决方案出现之前，这里有一个临时解决方案。"
   },
   "welcome_to_ghostery": {
     "message": "欢迎使用 Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "您的隐私功能："
-	},
-	"account_details": {
-		"message": "帐户详情"
-	},
-	"contributor": {
-		"message": "贡献者"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "帮助 Ghostery 为建立以隐私为基本人权的网络而奋斗。"
-	},
-	"join_ghostery": {
-		"message": "加入 Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "保存您的自定义设置并在浏览器和设备之间同步。"
-	},
-	"settings_sync": {
-		"message": "设置同步"
-	},
-	"you_are_signed_in_as_": {
-		"message": "你的登录身份为："
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube 禁止您观看无广告视频？"
+  }
 }
