--- a/extension-manifest-v2/_locales/zh_TW/messages.json
+++ b/extension-manifest-v2/_locales/zh_TW/messages.json
@@ -680,6 +680,9 @@
   "dollar_sign": {
     "message": "&#36;"
   },
+  "don_t_ask_again": {
+    "message": "不要再問"
+  },
   "done": {
     "message": "完成"
   },
@@ -714,6 +717,9 @@
   "enable_new_setup": {
     "message": "啟用新設定"
   },
+  "enable_now": {
+    "message": "立即啟用"
+  },
   "enable_when_blacklisted": {
     "message": "欲使用此功能，請取消限制網站。"
   },
@@ -744,6 +750,9 @@
   },
   "expand_all": {
     "message": "展開全部"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "只需幾個簡單步驟，即可將 Ghostery 廣告攔截功能擴展到搜尋引擎。"
   },
   "extensions": {
     "message": "擴展",
@@ -864,6 +873,9 @@
   "learn_more": {
     "message": "瞭解更多"
   },
+  "learn_more_about_youtube_s_challenges_to_ad_blockers": {
+    "message": "詳細了解 YouTube 對廣告攔截器的挑戰 不要再問了"
+  },
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "讓 Ghostery 成為你的全面隱私倡議者，拒絕所有彈出式視窗和追蹤，或者你自己動手！"
   },
@@ -912,6 +924,9 @@
   },
   "modified": {
     "message": "已修改"
+  },
+  "more_ad_blocking_available": {
+    "message": "更多可用的廣告攔截功能"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "更多有關 Ghostery 宣言中 $${0} 方法的資訊。"
@@ -975,6 +990,9 @@
   "on_this_website": {
     "message": "在此網站上"
   },
+  "open_youtube_in_private_window": {
+    "message": "在私人視窗中開啟 YouTube"
+  },
   "options_tracker_wheel_disabled": {
     "message": "在瀏覽器工具欄中禁用跟踪輪"
   },
@@ -983,6 +1001,10 @@
   },
   "organizations": {
     "message": "組織"
+  },
+  "other": {
+    "message": "其他",
+    "description": "Tracker category name"
   },
   "page_load": {
     "message": "網頁載入"
@@ -1903,8 +1925,14 @@
     "message": "不明的",
     "description": "Tracker category name"
   },
+  "visit_our_blog": {
+    "message": "造訪我們的博客"
+  },
   "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
     "message": "我們更新了條款及條件。若要在瀏覽時繼續使用 Ghostery Tracker 和廣告攔截器，請更新設定。"
+  },
+  "we_know_you_rely_on_ghostery_for_a_smooth_youtube_experience__until_a_more_refined_solution_emerges__here_s_a_temporary_fix_": {
+    "message": "我們知道您依靠 Ghostery 來獲得流暢的 YouTube 體驗。 在出現更完善的解決方案之前，這裡有一個臨時解決方案。"
   },
   "welcome_to_ghostery": {
     "message": "歡迎來到 Ghostery"
@@ -1951,26 +1979,8 @@
   },
   "your_privacy_features_": {
     "message": "你的隱私功能："
-	},
-	"account_details": {
-		"message": "帳戶詳細資料"
-	},
-	"contributor": {
-		"message": "貢獻者"
-	},
-	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
-		"message": "協助 Ghostery 為建立以隱私為基本人權的網路而奮鬥。"
-	},
-	"join_ghostery": {
-		"message": "加入 Ghostery"
-	},
-	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
-		"message": "儲存並在瀏覽器和裝置之間同步您的自訂設定。"
-	},
-	"settings_sync": {
-		"message": "設定同步"
-	},
-	"you_are_signed_in_as_": {
-		"message": "您登入為："
-	}
+  },
+  "youtube_blocking_you_from_watching_ad_free_videos_": {
+    "message": "YouTube 阻止您觀看無廣告的影片？"
+  }
 }
