--- a/extension-manifest-v2/_locales/ko/messages.json
+++ b/extension-manifest-v2/_locales/ko/messages.json
@@ -87,6 +87,9 @@
   "all_popups": {
     "message": "팝업 전체"
   },
+  "allow_ghostery_in_private_windows": {
+    "message": "비공개 창에서 고스트리밍 허용"
+  },
   "allowed": {
     "message": "허용됨"
   },
@@ -870,6 +873,9 @@
   "last_name_field_label": {
     "message": "성(옵션):"
   },
+  "learn_how": {
+    "message": "방법 알아보기"
+  },
   "learn_more": {
     "message": "자세히 알아보기 "
   },
@@ -989,6 +995,12 @@
   },
   "on_this_website": {
     "message": "이 웹사이트에서"
+  },
+  "open_video": {
+    "message": "비디오 열기"
+  },
+  "open_youtube_in_a_private_window": {
+    "message": "비공개 창에서 YouTube 열기"
   },
   "open_youtube_in_private_window": {
     "message": "비공개 창에서 YouTube 열기"
